#795: Fix wrong margin for messages

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -308,7 +308,7 @@ input[type="reset"] {
 }
 
 .m-content {
-	padding: 0 0 0 24px;
+	padding: 0 0 0 8px;
 	margin-bottom: 7px;
 }
 
